--- a/src/resource/views/ad_bills.hbs
+++ b/src/resource/views/ad_bills.hbs
@@ -128,7 +128,7 @@
     <div class="admin d-flex justify-content-center mt-3">
 
         <div class="wrapper">
-            <a class="cta" href="/admin">
+            <a class="cta" href="/admin/quan-ly-combo">
                 <span class="d-none"></span>
                 <span>
                     <svg width="66px" height="43px" viewBox="0 0 66 43" version="1.1" xmlns="http://www.w3.org/2000/svg"
@@ -144,7 +144,7 @@
                         </g>
                     </svg>
                 </span>
-                <span style="margin: 16px 0 0 16px;">VỀ TRANG CHỦ</span>
+                <span style="margin: 16px 0 0 16px;">QUẢN LÝ COMBO</span>
             </a>
         </div>
 
@@ -215,6 +215,9 @@
 </body>
 
 <script>
+    document.getElementById("img__admin").addEventListener('click', () => {
+        window.location.href = '/admin'
+    })
 </script>
 
 </html>
