--- a/src/resource/views/ad_responses.hbs
+++ b/src/resource/views/ad_responses.hbs
@@ -159,7 +159,7 @@
     <div class="admin d-flex justify-content-center mt-3">
 
         <div class="wrapper">
-            <a class="cta" href="/admin">
+            <a class="cta" href="/admin/quan-ly-phong">
                 <span class="d-none"></span>
                 <span>
                     <svg width="66px" height="43px" viewBox="0 0 66 43" version="1.1" xmlns="http://www.w3.org/2000/svg"
@@ -175,7 +175,7 @@
                         </g>
                     </svg>
                 </span>
-                <span style="margin: 16px 0 0 16px;">VỀ TRANG CHỦ</span>
+                <span style="margin: 16px 0 0 16px;">QUẢN LÝ PHÒNG</span>
             </a>
         </div>
 
@@ -254,7 +254,7 @@
                     <td>{{this.sodienthoai}}</td>
                     <td>{{this.chude}}</td>
                     <td>{{this.noidung}}</td>
-                    <td><span id="btn__update" onclick="res('{{this.sodienthoai}}')">Phản hồi</span> </td>
+                    <td><span style="color: aqua;" id="btn__update" onclick="res('{{this.sodienthoai}}')">Phản hồi</span> </td>
                 </tr>
                 {{/each}}
 
