--- a/src/resource/views/ad_rooms.hbs
+++ b/src/resource/views/ad_rooms.hbs
@@ -159,7 +159,7 @@
     <div class="admin d-flex justify-content-center mt-3">
 
         <div class="wrapper">
-            <a class="cta" href="/admin">
+            <a class="cta" href="/admin/quan-ly-phim">
                 <span class="d-none"></span>
                 <span>
                     <svg width="66px" height="43px" viewBox="0 0 66 43" version="1.1" xmlns="http://www.w3.org/2000/svg"
@@ -175,7 +175,7 @@
                         </g>
                     </svg>
                 </span>
-                <span style="margin: 16px 0 0 16px;">VỀ TRANG CHỦ</span>
+                <span style="margin: 16px 0 0 16px;">QUẢN LÝ PHIM</span>
             </a>
         </div>
 
@@ -185,8 +185,8 @@
         </div>
 
         <div class="wrapper">
-            <a class="cta" href="/admin/quan-ly-ghe">
-                <span style="margin-top: 16px;">QUẢN LÝ GHẾ</span>
+            <a class="cta" href="/admin/phan-hoi">
+                <span style="margin-top: 16px;">QUẢN LÝ PHẢN HỒI</span>
                 <span>
                     <svg width="66px" height="43px" viewBox="0 0 66 43" version="1.1" xmlns="http://www.w3.org/2000/svg"
                         xmlns:xlink="http://www.w3.org/1999/xlink">
