--- a/src/resource/views/ad_suatchieu.hbs
+++ b/src/resource/views/ad_suatchieu.hbs
@@ -202,7 +202,7 @@
     <div class="admin d-flex justify-content-center mt-3">
 
         <div class="wrapper">
-            <a class="cta" href="/admin">
+            <a class="cta" href="/admin/quan-ly-hoa-don">
                 <span class="d-none"></span>
                 <span>
                     <svg width="66px" height="43px" viewBox="0 0 66 43" version="1.1" xmlns="http://www.w3.org/2000/svg"
@@ -218,7 +218,7 @@
                         </g>
                     </svg>
                 </span>
-                <span style="margin: 16px 0 0 16px;">VỀ TRANG CHỦ</span>
+                <span style="margin: 16px 0 0 16px;">QUẢN LÝ HÓA ĐƠN</span>
             </a>
         </div>
 
@@ -333,7 +333,7 @@
                     <td>{{this.giochieu}}</td>
                     <td>{{formatMoney this.giave}}</td>
                     <td><span class="btn__delete mx-1" onclick="hidenFilmCode('{{this.masuatchieu}}')"
-                            data-bs-toggle="modal" data-bs-target="#exampleModal">Ẩn</span></td>
+                            style="color: aqua;" data-bs-toggle="modal" data-bs-target="#exampleModal">Ẩn</span></td>
                 </tr>
                 {{/each}}
             </tbody>
