--- a/src/resource/views/admin.hbs
+++ b/src/resource/views/admin.hbs
@@ -92,7 +92,7 @@
 <body>
     <div class="admin d-flex justify-content-center mt-3">
         <img id="img__admin" src="/img/security.png" alt="img__admin">
-        <span id="adminText">Admin</span>
+        <span style="transform: none;" id="adminText">Admin</span>
     </div>
     <div class="container">
 
@@ -101,15 +101,14 @@
             <div class="list__button d-flex justify-content-around flex-wrap">
                 <a href="/admin/quan-ly-tai-khoan" class="button-75" role="button"><span class="text">Quản lý thành viên</span></a>
                 <a href="/admin/quan-ly-phim" class="button-75" role="button"><span class="text">Quản lý phim</span></a>
-                <a class="button-75" role="button"><span class="text">Quản lý vé</span></a>
                 <a href="/admin/quan-ly-phong" class="button-75" role="button"><span class="text">Quản lý phòng</span></a>
-                <a class="button-75" role="button"><span class="text">Quản lý ghế</span></a>
+                <a href="/admin/phan-hoi" class="button-75" role="button"><span class="text">Quản lý phản hồi</span></a>
             </div>
         </div>
 
         <div class="row mt-4">
             <div class="list__button d-flex justify-content-around flex-wrap">
-                <a href="/admin/phan-hoi" class="button-75" role="button"><span class="text">Quản lý phản hồi</span></a>
+                
                 <a href="/admin/quan-ly-khuyen-mai" class="button-75" role="button"><span class="text">Quản lý khuyến mãi</span></a>
                 <a href="/admin/quan-ly-combo" class="button-75" role="button"><span class="text">Quản lý combo</span></a>
                 <a href="/admin/quan-ly-hoa-don" class="button-75" role="button"><span class="text">Quản lý hóa đơn</span></a>
