--- a/src/public/css/button_admin.css
+++ b/src/public/css/button_admin.css
@@ -1,21 +1,18 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins:900i');
-
 * {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 
-
-
 .wrapper {
-  display: flex;
-  justify-content: center;
+    display: flex;
+    justify-content: center;
 }
 
 .cta {
     display: flex;
     padding: 10px 45px;
     text-decoration: none;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Times New Roman', serif;
     font-size: 40px;
     color: white;
     background: #6225E6;
@@ -25,7 +22,7 @@
 }
 
 .cta:focus {
-   outline: none; 
+    outline: none;
 }
 
 .cta:hover {
@@ -38,22 +35,23 @@
     margin-right: 0px;
 }
 
-.cta:hover  span:nth-child(2) {
+.cta:hover span:nth-child(2) {
     transition: 0.5s;
     margin-right: 45px;
 }
 
-  span {
-    transform: skewX(15deg) 
-  }
+span {
+    transform: skewX(15deg)
+}
 
-  span:nth-child(2) {
+span:nth-child(2) {
     width: 20px;
     margin-left: 30px;
     position: relative;
     top: 12%;
-  }
-  
+}
+
+
 /**************SVG****************/
 
 path.one {
@@ -79,6 +77,7 @@ path.two {
     transform: translateX(0%);
     animation: color_anim 1s infinite 0.4s;
 }
+
 
 /* SVG animations */
 
