--- a/src/resource/views/ad_combos.hbs
+++ b/src/resource/views/ad_combos.hbs
@@ -159,7 +159,7 @@
     <div class="admin d-flex justify-content-center mt-3">
 
         <div class="wrapper">
-            <a class="cta" href="/admin">
+            <a class="cta" href="/admin/quan-ly-khuyen-mai">
                 <span class="d-none"></span>
                 <span>
                     <svg width="66px" height="43px" viewBox="0 0 66 43" version="1.1" xmlns="http://www.w3.org/2000/svg"
@@ -175,7 +175,7 @@
                         </g>
                     </svg>
                 </span>
-                <span style="margin: 16px 0 0 16px;">VỀ TRANG CHỦ</span>
+                <span style="margin: 16px 0 0 16px;">QUẢN LÝ KHUYẾN MÃI</span>
             </a>
         </div>
 
@@ -185,7 +185,7 @@
         </div>
 
         <div class="wrapper">
-            <a class="cta" href="/admin/quan-ly-hon-don">
+            <a class="cta" href="/admin/quan-ly-hoa-don">
                 <span style="margin-top: 16px;">QUẢN LÝ HÓA ĐƠN</span>
                 <span>
                     <svg width="66px" height="43px" viewBox="0 0 66 43" version="1.1" xmlns="http://www.w3.org/2000/svg"
