Fix Error about sale in buy ticket

--- a/src/resource/views/ad_bills.hbs
+++ b/src/resource/views/ad_bills.hbs
@@ -176,41 +176,40 @@
         </div>
     </div>
 
-        <table id="table_sale" class="table table-dark mt-4">
-            <thead>
-                <tr>
-                    <th scope="col">Mã hóa đơn</th>
-                    <th scope="col">Mã người mua</th>
-                    <th scope="col">Mã vé</th>
-                    <th scope="col">Mã combo</th>
-                    <th scope="col">Mã khuyến mãi</th>
-                    <th scope="col">Mã suất chiếu</th>
-                    <th scope="col">Mã ghế</th>
-                    <th scope="col">Số lượng vé</th>
-                    <th scope="col">Thành tiền</th>
-                    <th scope="col">Ngày thanh toán</th>
-                </tr>
-            </thead>
-            <tbody>
-                {{#each data}}
-                <tr>
-                    <th scope="row">{{mahd}}</th>
-                    <td>{{userid}}</td>
-                    <td>{{mave}}</td>
-                    <td>{{macombo}}</td>
-                    <td>{{makhuyenmai}}</td>
-                    <td>{{masuatchieu}}</td>
-                    <td>{{maghe}}</td>
-                    <td>{{soluong}}</td>
-                    <td>{{thanhtien}}</td>
-                    <td>{{formatDate ngaythanhtoan}}</td>
-                </tr>
-                {{/each}}
+    <table id="table_sale" class="table table-dark mt-4">
+        <thead>
+            <tr>
+                <th scope="col">Mã hóa đơn</th>
+                <th scope="col">Mã người mua</th>
+                <th scope="col">Mã vé</th>
+                <th scope="col">Mã combo</th>
+                <th scope="col">Mã khuyến mãi</th>
+                <th scope="col">Mã suất chiếu</th>
+                <th scope="col">Mã ghế</th>
+                <th scope="col">Số lượng vé</th>
+                <th scope="col">Thành tiền</th>
+                <th scope="col">Ngày thanh toán</th>
+            </tr>
+        </thead>
+        <tbody>
+            {{#each data}}
+            <tr class="bills">
+                <th scope="row">{{mahd}}</th>
+                <td>{{userid}}</td>
+                <td>{{mave}}</td>
+                <td>{{macombo}}</td>
+                <td>{{makhuyenmai}}</td>
+                <td>{{masuatchieu}}</td>
+                <td>{{maghe}}</td>
+                <td>{{soluong}}</td>
+                <td>{{thanhtien}}</td>
+                <td>{{formatDate ngaythanhtoan}}</td>
+            </tr>
+            {{/each}}
 
-            </tbody>
-        </table>
-
-    </div>
+        </tbody>
+    </table>
+    <input type="date" class="form-control" id="date" style="width: 180px;"/>
 
 </body>
 
