--- a/src/resource/views/director_detail.hbs
+++ b/src/resource/views/director_detail.hbs
@@ -72,20 +72,22 @@
                         </div>
                     </div>
                 </div>
+                {{/each}}
                 <div class="review-cover mb-3">
                     <div class="actor-content-lbl">
                         <h4>BÀI VIẾT LIÊN QUAN</h4>
                     </div>
                     <div class="row">
+                        {{#each all4director}}
                         <div class="col-lg-3 col-md-4 col-sm-6">
                             <div class="img-review-container">
-                                <a href="#">
+                                <a href="/chi-tiet-dao-dien/{{madaodien}}">
                                     <img class="img-review" src="/img/{{hinhanhdoc}}">
                                 </a>
 
                                 <div class="caption">
                                     <h6 class="main-cap">{{ten}}</h6>
-                                    <a href="#">
+                                    <a href="/chi-tiet-dao-dien/{{madaodien}}">
                                         <div class="detail">
                                             <button class="detail-btn">CHI TIẾT</button>
                                         </div>
@@ -93,10 +95,11 @@
                                 </div>
                             </div>
                         </div>
+                        {{/each}}
                     </div>
 
                 </div>
-                {{/each}}
+                
             </div>
 
             <div class="col-3 right">
